# 3d-page-wgpu

./: .gitignore  Cargo.toml  README.md  index.html  index.scss  trunk.toml
src/: engine.rs  main.rs  rendering.rs  shader.wgsl
src/engine/: define.rs  load.rs  scene.rs  update.rs
src/frontend/: controls.rs  eventlistener.rs  gui.rs
src/rendering/: common.rs  webgpu.rs
src/shader/: color.wgsl  differed.wgsl  differed_write_gbuffers.wgsl  phong.wgsl  unlit.wgsl
