[package]
name = "wgpu-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For Build
log = "0.4.22"
gloo = "0.11.0"
futures = "0.3.30"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wgpu = "22.0.0"
# Utility
vek = "0.17.0"
pollster = "0.3.0"
game-loop = "1.2.0"

[dependencies.web-sys]
version = "0.3.69"
features = ["HtmlCanvasElement"]

# Optimize Build .wasm Size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
