[package]
name = "wgpu-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log 					 = "0.4.22"
gloo 					 = "0.11.0"
futures 				 = "0.3.30"
wee_alloc 				 = "0.4.5"
console_error_panic_hook = "0.1.7"
wasm-logger 			 = "0.2.0"
wasm-bindgen 			 = "0.2.92"
wasm-bindgen-futures 	 = "0.4.42"
wgpu 					 = "23.0.1"

glam 	 = "0.28.0"
bytemuck = { version = "1.16.1", features = ["derive", "min_const_generics"]}
web-time = "1.1.0"
tobj 	 = { version = "4.0.2", default-features = false, features = ["async"]}
reqwest  = "0.11"
anyhow   = "1.0.93"
cfg-if	 = "1.0.0"

[dependencies.web-sys]
version = "0.3.72"
features = [
	'CanvasRenderingContext2d',
	'CssStyleDeclaration',
	'Document',
	'Element',
	'EventTarget',
	'HtmlCanvasElement',
	'HtmlSelectElement',
	'HtmlElement',
	'MouseEvent',
	'WheelEvent',
	'KeyboardEvent',
	'InputEvent',
	'Node',
	'Window',
	'Location'
	]

[profile.release]
panic 		  = 'abort'
codegen-units = 1
opt-level 	  = 'z'
lto 		  = true
